fix clipping on place title

--- a/app/assets/stylesheets/_globalnav/_core/_nav.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_nav.sass
@@ -157,7 +157,7 @@
   white-space: nowrap
   margin-right: 20px
   // Fix the text-overflow bug in firefox to avoid the final letter being clipped
-  padding-right: 2px
+  padding-right: 6px
   padding-left: 22px
   .responsive &
     text-overflow: none
@@ -179,6 +179,7 @@
   font-weight: bold
   color: $dark-blue-gray
   line-height: 26px
+  // to take the space away before the comma
   margin-right: -4px
   &:hover
     text-decoration: none
